Updated Song to use concurrency model but NOT TESTED YET, need to create Song unit tests. Introduced performReadAPImethod everywhere. SongStructure and ChordLeadSheet unit tests OK.